--- a/themes/hugo-theme-codex/static/css/post.css
+++ b/themes/hugo-theme-codex/static/css/post.css
@@ -361,11 +361,16 @@ main {
 
 .social-icons__icon--twitter {
   background-image: url("/icons/twitter.svg");
-  margin-right: 2rem
+  margin-right: 2rem;
+}
+
+.social-icons__icon--instagram {
+  background-image: url("/icons/instagram.svg");
+  margin-right: 2rem;
 }
 
 .social-icons__icon--github {
-  background-image: url("/icons/github.svg")
+  background-image: url("/icons/github.svg");
 }
 
 code[class*="language-"],
