--- a/themes/hugo-theme-codex/layouts/partials/social-icons.html
+++ b/themes/hugo-theme-codex/layouts/partials/social-icons.html
@@ -2,6 +2,9 @@
   {{ if isset .Site.Params "twitter" }}
   <a class="social-icons__icon social-icons__icon--twitter" href="https://twitter.com/{{ .Site.Params.twitter }}"></a>
   {{ end }}
+  {{ if isset .Site.Params "instagram" }}
+  <a class="social-icons__icon social-icons__icon--instagram" href="https://instagram.com/{{ .Site.Params.instagram }}"></a>
+  {{ end }}
   {{ if isset .Site.Params "github" }}
   <a class="social-icons__icon social-icons__icon--github" href="https://github.com/{{ .Site.Params.github }}"></a>
   {{ end }}
