--- a/themes/hugo-theme-codex/static/css/about.css
+++ b/themes/hugo-theme-codex/static/css/about.css
@@ -409,7 +409,7 @@ main {
 }
 
 .fancy {
-  color: #ea0000
+  color: #ea0000;
 }
 
 .handle {
@@ -421,7 +421,7 @@ main {
 
 .writing {
   text-decoration: none;
-  color: #ea0000
+  color: #ea0000;
 }
 
 main {
