Made some formatting changes and updated About

--- a/themes/hugo-theme-codex/static/css/post.css
+++ b/themes/hugo-theme-codex/static/css/post.css
@@ -359,18 +359,19 @@ main {
   background-repeat: no-repeat
 }
 
-.social-icons__icon--twitter {
-  background-image: url("/icons/twitter.svg");
-  margin-right: 2rem;
-}
-
-.social-icons__icon--instagram {
-  background-image: url("/icons/instagram.svg");
+.social-icons__icon--linkedin {
+  background-image: url("/icons/linkedin.svg");
   margin-right: 2rem;
 }
 
 .social-icons__icon--github {
   background-image: url("/icons/github.svg");
+  margin-right: 2rem;
+}
+
+.social-icons__icon--twitter {
+  background-image: url("/icons/twitter.svg");
+  margin-right: 2rem;
 }
 
 code[class*="language-"],
