--- a/themes/hugo-theme-codex/layouts/partials/social-icons.html
+++ b/themes/hugo-theme-codex/layouts/partials/social-icons.html
@@ -1,11 +1,11 @@
 <div class="social-icons">
-  {{ if isset .Site.Params "twitter" }}
-  <a class="social-icons__icon social-icons__icon--twitter" href="https://twitter.com/{{ .Site.Params.twitter }}"></a>
-  {{ end }}
-  {{ if isset .Site.Params "instagram" }}
-  <a class="social-icons__icon social-icons__icon--instagram" href="https://instagram.com/{{ .Site.Params.instagram }}"></a>
+  {{ if isset .Site.Params "linkedin" }}
+  <a class="social-icons__icon social-icons__icon--linkedin" href="https://linkedin.com/in/{{ .Site.Params.linkedin }}"></a>
   {{ end }}
   {{ if isset .Site.Params "github" }}
   <a class="social-icons__icon social-icons__icon--github" href="https://github.com/{{ .Site.Params.github }}"></a>
+  {{ end }}
+  {{ if isset .Site.Params "twitter" }}
+  <a class="social-icons__icon social-icons__icon--twitter" href="https://twitter.com/{{ .Site.Params.twitter }}"></a>
   {{ end }}
 </div>
